<resources>
    <string name="app_name">20230224-SulemanLakhani-NYCSchools</string>
    <string name="abn">ABN</string>
    <string name="name">Name</string>
    <string name="school_name">School Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zip">ZIP</string>
    <string name="state">State</string>
    <string name="web">Web</string>
    <string name="phone">Phone</string>
    <string name="test_takers">Test Takers</string>
    <string name="reading_avg_score">Reading Avg Score</string>
    <string name="math_avg_score">Math Avg Score</string>
    <string name= "writing_avg_score">Writing Avg Score</string>
</resources>